--- a/notes/by_author.html
+++ b/notes/by_author.html
@@ -26,7 +26,7 @@ Article</tr>
 <tr valign="top"><td>
 002</td><td>
 <notes_title><a href="unlocbox-note-002.pdf">UNLocBoX: user guide</a></notes_title><br>
-<notes_author>Nathanaël Perraudin, Vassilis Kalofolias</notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a>, Vassilis Kalofolias</notes_author><br>
 </td><td>
 2014
 </td><td>
@@ -35,7 +35,7 @@ Documentation</tr>
 <tr valign="top"><td>
 003</td><td>
 <notes_title><a href="unlocbox-note-003.pdf">UNLocBoX Documentation</a></notes_title><br>
-<notes_author>Nathanaël Perraudin</notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a></notes_author><br>
 </td><td>
 2013
 </td><td>
@@ -44,7 +44,7 @@ Documentation</tr>
 <tr valign="top"><td>
 006</td><td>
 <notes_title><a href="unlocbox-note-006.pdf">Designing Gabor windows using convex optimization</a></notes_title><br>
-<notes_author>Nathanaël Perraudin, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=660:holighaus-di-nicki&catid=13&Itemid=419&lang=en">Nicki Hollighaus</a>, <a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=51&Itemid=634&lang=en">Peter Balazs</a></notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=660:holighaus-di-nicki&catid=13&Itemid=419&lang=en">Nicki Hollighaus</a>, <a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=51&Itemid=634&lang=en">Peter Balazs</a></notes_author><br>
 <notes_third><a href="unlocbox-note-006.bib">Cite this paper</a></notes_third><br>
 <notes_third><a href="https://lts2.epfl.ch/rrp/gdwuco/">Code</a></notes_third><br>
 </td><td>
@@ -55,7 +55,7 @@ Article</tr>
 <tr valign="top"><td>
 007</td><td>
 <notes_title><a href="unlocbox-note-007.pdf">A fast Griffin Lim algorithm</a></notes_title><br>
-<notes_author>Nathanaël Perraudin, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=51&Itemid=634&lang=en">Peter Balazs</a>, <a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a></notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=51&Itemid=634&lang=en">Peter Balazs</a>, <a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a></notes_author><br>
 <notes_third><a href="unlocbox-note-007.bib">Cite this paper</a></notes_third><br>
 <notes_third><a href="https://lts2.epfl.ch/rrp/fgla/">Code</a></notes_third><br>
 </td><td>
@@ -66,7 +66,7 @@ Conference paper</tr>
 <tr valign="top"><td>
 008</td><td>
 <notes_title><a href="unlocbox-note-008.pdf">A simple tutorial for the UNLocBoX</a></notes_title><br>
-<notes_author>Nathanaël Perraudin</notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a></notes_author><br>
 </td><td>
 2013
 </td><td>
@@ -75,7 +75,7 @@ Tutorial</tr>
 <tr valign="top"><td>
 009</td><td>
 <notes_title><a href="unlocbox-note-009.pdf">Gabor dual windows using convex optimization</a></notes_title><br>
-<notes_author>Nathanaël Perraudin, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=660:holighaus-di-nicki&catid=13&Itemid=419&lang=en">Nicki Hollighaus</a>, <a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=51&Itemid=634&lang=en">Peter Balazs</a></notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=660:holighaus-di-nicki&catid=13&Itemid=419&lang=en">Nicki Hollighaus</a>, <a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a>, <a href="http://www.kfs.oeaw.ac.at/index.php?option=com_content&view=article&id=51&Itemid=634&lang=en">Peter Balazs</a></notes_author><br>
 <notes_third><a href="unlocbox-note-009.bib">Cite this paper</a></notes_third><br>
 <notes_third><a href="https://lts2.epfl.ch/rrp/gdwuco/">Code</a></notes_third><br>
 </td><td>
@@ -86,7 +86,7 @@ Conference paper</tr>
 <tr valign="top"><td>
 010</td><td>
 <notes_title><a href="unlocbox-note-010.pdf">The UNLocBoX: A Matlab convex optimization toolbox using proximal splitting methods</a></notes_title><br>
-<notes_author>Nathanaël Perraudin, David Shuman, Gilles Puy, <a href="http://people.epfl.ch/pierre.vandergheynst?lang=en">Pierre Vandergheynst</a></notes_author><br>
+<notes_author><a href="perraudin.info">Nathanaël Perraudin</a>, David Shuman, Gilles Puy, <a href="http://people.epfl.ch/pierre.vandergheynst?lang=en">Pierre Vandergheynst</a></notes_author><br>
 <notes_third><a href="unlocbox-note-010.bib">Cite this paper</a></notes_third><br>
 </td><td>
 2013
@@ -96,7 +96,7 @@ Article</tr>
 <tr valign="top"><td>
 001</td><td>
 <notes_title><a href="unlocbox-note-001.pdf">The UNLocBoX Notes series</a></notes_title><br>
-<notes_author><a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a>, Nathanaël Perraudin</notes_author><br>
+<notes_author><a href="http://www.elektro.dtu.dk/English/Service/Phonebook.aspx?lg=showcommon&id=19970&type=person">Peter L. Søndergaard</a>, <a href="perraudin.info">Nathanaël Perraudin</a></notes_author><br>
 </td><td>
 2013
 </td><td>
