--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		Fixed-Point algorithms for inverse problems in science and engineering. 
 		</p>
 		<p>
-		If you use the UNLocBoX, please kindly cite <a href="unlocbox-note-010.bib">UNLocBoX-note-010</a>. If you have any questions about the UnlocBox , please contact Nathanaël Perraudin at <a href="mailto:unlocbox@groupes.epfl.ch">  unlocbox at groupes dot epfl dot ch </a>
-		</p>
+		If you use the UNLocBoX, please kindly cite <a href="unlocbox-note-010.bib">UNLocBoX-note-010</a>. If you have any questions about the UnlocBox , please contact NathanaÃ«l Perraudin at <a href="mailto:unlocbox@groupes.epfl.ch">  unlocbox at groupes dot epfl dot ch </a>
+		</p> 
 
 		To be able to run the demos, you need different toolboxes: 
 		<ul>
